# brussels

./: README.md
effector-template/effector/src/: utils.rs
fluence/: Cargo.toml  fluence.yaml  provider.yaml
fluence/.fluence/: _docker-compose.yaml  docker-compose.yaml  provider-artifacts.yaml  workers.yaml
fluence/.fluence/aqua/: deals.aqua  services.aqua
fluence/.fluence/aqua-dependencies/: package-lock.json
fluence/.fluence/configs/: nox-0_Config.toml  nox-1_Config.toml  nox-2_Config.toml
fluence/src/compiled-aqua/: main.ts
fluence/src/services/: cio-kubo
fluence/src/services/lotusService/: service.yaml
fluence/src/services/lotusService/lotus-effector/: lotus_effector.wasm  module.yaml
fluence/src/services/lotusService/lotusService/: Cargo.toml  module.yaml
fluence/src/services/lotusService/lotusService/src/: main.rs
fluence/src/services/testService/: service.yaml
fluence/src/services/testService/testService/: Cargo.toml  module.yaml
lotus-effector/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  cidv1  test.sh
lotus-effector/.github/release-please/: config.json
lotus-effector/.github/workflows/: release.yml  tests.yml
lotus-effector/cid/: Cargo.toml  built.rs
lotus-effector/cid/src/: lib.rs
lotus-effector/effector/: Cargo.toml  module.yaml
lotus-effector/effector/src/: import.rs  main.rs
lotus-effector/effector/test_artifacts/: Config.toml
lotus-effector/imports/: Cargo.toml
lotus-effector/imports/src/: lib.rs
lotus-effector/types/: Cargo.toml
lotus-effector/types/src/: lib.rs
nox-with-lotus/: Dockerfile
(+4 files in other folders)
