[workspace]
resolver = "2"
members = [ "effector", "types", "cid", "imports" ]

  [workspace.dependencies]
  marine-rs-sdk-test = "0.16.1"
  eyre = "0.6.12"

    [workspace.dependencies.lotus-effector-types]
    path = "types"

    [workspace.dependencies.lotus-effector-imports]
    path = "imports"

    [workspace.dependencies.lotus_effector]
    path = "effector"

    [workspace.dependencies.lotus-effector-cid]
    path = "cid"

    [workspace.dependencies.marine-rs-sdk]
    version = "0.14.0"
    features = [ "logger" ]
